--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <div class="social-icons">
         <a href="mailto:vitorcampos152.0@gmail.com"><i class="fas fa-envelope"></i></a>
         <a href="tel:+5515996384463"><i class="fas fa-phone"></i></a>
-        <a href="https://linkedin.com/in/seu_perfil" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/seu_perfil" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://instagram.com/seu_perfil" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://linkedin.com/in/vitorcampos15" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/VitorCampos15" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://instagram.com/vitorcampos15" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
+  </header>
   </header>
 
   <!-- Menu de Navegação -->
